# algorithms

./: .gitignore
c/: CMakeLists.txt
c/convert/: binaryToDecimal.c
c/lib/: CMakeLists.txt  util.c  util.h
c/sort/: bubbleSort.c  insertionSort.c  selectionSort.c
java/: pom.xml
java/src/main/java/com/marlonzl7/convert/: BinaryToDecimal.java  DecimalToBinary.java
java/src/main/java/com/marlonzl7/sort/: BubbleSort.java
